# Document_OCR_MistralAI

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  app.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml
__tests__/: smoke.test.ts
app/: _layout.tsx  callback.tsx  index.tsx
app/(app)/: capture.tsx  home.tsx  result.tsx
app/(auth)/: login.tsx
app/(lock)/: unlock.tsx
src/api/: client.ts  endpoints.ts
src/auth/: auth0.ts  biometric.ts  pkce.ts  session.ts
src/config/: env.ts
src/ocr_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/ocr_service/api/: main.py  models.py  routes.py
src/ocr_service/cli/: process.py
src/ocr_service/clients/: mistral_ocr.py
src/ocr_service/config/: mistral_client.py  settings.py
src/ocr_service/core/: types.py
src/ocr_service/core/utils/: extract.py  hash.py  image.py  normalization.py  normalize.py  ocr_text.py  patterns.py  rules.py  text.py
src/ocr_service/documents/: base.py  personal_schema.py  registry.py  vehicle_schema.py
src/ocr_service/documents/address_card/: extract.py  postprocess.py  processor.py  rules.py  schema.py
src/ocr_service/documents/detection/: id_old_front.py
src/ocr_service/documents/driving_license/: extract.py  processor.py  rules.py  schema.py
src/ocr_service/documents/id_back/: extract.py  processor.py  rules.py  schema.py
src/ocr_service/documents/id_front/: extract.py  normalize.py  processor.py  rules.py  schema.py
src/ocr_service/documents/id_old_back/: extract.py  processor.py  rules.py  schema.py
src/ocr_service/documents/id_old_front/: extract.py  processor.py  rules.py  schema.py
src/ocr_service/documents/passport/: extract.py  processor.py  rules.py  schema.py
src/ocr_service/documents/processors/: address_card.py  coc.py  driving_license.py  id_back.py  id_front.py  id_old_back.py  id_old_front.py  passport.py  registration.py
src/ocr_service/ocr/: cache.py
src/ocr_service/pipeline/: service.py
src/storage/: secureStore.ts
(+16 files in other folders)
