[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ocr-service"
version = "0.1.0"
description = "OCR service for Hungarian and EU identity documents using Mistral OCR"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

authors = [
  { name = "BazisNet" }
]

dependencies = [
  # --- Core ---
  "mistralai>=0.4.0",
  "pydantic>=2.6",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "tenacity>=8.2",
  "structlog>=24.1",

  # --- Image & document processing ---
  "Pillow>=10.2",
  "opencv-python-headless>=4.9",
  "numpy>=1.26",

  # --- API / server ---
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.1",
  "ruff>=0.3",
  "black>=24.1",
  "mypy>=1.8",
  "pre-commit>=3.6"
]

# If you actually need PDF parsing locally (not required for sending PDFs to Mistral):
pdf = [
  "PyMuPDF>=1.23"
]

# Optional: makes `python -m ocr_service.cli.process` unnecessary
# (adjust entry point if your CLI module path differs)
[project.scripts]
ocr-service = "ocr_service.cli.process:main"

# -------------------------
# Packaging (src/ layout)
# -------------------------
[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["ocr_service*"]

# -------------------------
# Tooling configuration
# -------------------------
[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.isort]
known-first-party = ["ocr_service"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_return_any = false
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
